--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -123,7 +123,7 @@
   width: 200px; 
   /* width: 90%; */
 
-  background-color: hsl(60, 100%, 85%);
+  /* background-color: hsl(60, 32%, 45%); */
   font-size: 14px;
   color: #333;
 
@@ -196,10 +196,7 @@
   color: #333;
 }
 
-.user_story__text .yellow-marker,
-.dev_story__text .yellow-marker {
-  background-color: hsl(60, 100%, 85%);
-}
+
 
 
 
@@ -213,6 +210,10 @@
   overflow: scroll;
 }
 
+
+.yellow_marker {
+  background-color: hsl(60, 100%, 90%);
+}
 
 
 @media(max-width: 1024px) {
