--- a/portfolio-site-react/src/components/Menu/MenuContainer.css
+++ b/portfolio-site-react/src/components/Menu/MenuContainer.css
@@ -1,7 +1,8 @@
 .menu_container {
-  /* position: fixed;
-  bottom: 0; */
+  /* position: relative;
+  position: fixed;
+  bottom: 0;
   
-  /* width: 100%; */
-  /* height: 50px;  */
+  width: 100%;
+  height: 200px;  */
 }
