--- a/portfolio-site-react/src/components/PageContents/About/About.css
+++ b/portfolio-site-react/src/components/PageContents/About/About.css
@@ -52,7 +52,7 @@
   height: 250px;
   background-color: red;
   /* background-image: url('../../assets/profile_image_side_edit.jpeg'); */
-  /* background-image: url('../../../assets/profile_image_side_edit.jpeg'); */
+  background-image: url('../../../assets/profile_image_side_edit.jpeg');
   background-position: center;
   background-size: cover;
   /* background-attachment: fixed; */
