--- a/portfolio-site-react/src/components/PublicCommitment/PublicCommitment.css
+++ b/portfolio-site-react/src/components/PublicCommitment/PublicCommitment.css
@@ -20,13 +20,22 @@
 }
 
 
+
 .weeklyDWtime {
-  font-size: 28px;
+  font-size: 32px;
 }
 
 .DWtime {
-  font-size: 40px;
+  /* font-size: 40px; */
   color: red;
+}
+
+.DWtime.visible {
+  visibility: visible;
+}
+
+.DWtime.invisible {
+  visibility: hidden;
 }
 
 .desc {
