--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -204,8 +204,8 @@
 
 
 .portfolio_image {
-  margin: 0;
-  margin-top: 20px;
+  margin: 0 auto;
+  margin-top: 30px;
   box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
   /* width: 89%; */
   width: 500px;
