--- a/portfolio-site-react/src/components/Menu/Menu.css
+++ b/portfolio-site-react/src/components/Menu/Menu.css
@@ -14,15 +14,18 @@
   background-color: hsla(0, 0%, 100%, 0.8);
   color: #000;
 
-  transition: transform .4s
-              cubic-bezier(0, 10, 0, 0);
+  transition: 
+    transform .4s cubic-bezier(0, 10, 0, 0), 
+    background-color 1s ease;
+
 
   overflow: scroll;
+
   
 
 }
 
-#flyoutMenu:hover{
+#flyoutMenu:hover {
   background-color: hsla(0, 0%, 100%, 1);
 }
  
