--- a/portfolio-site-react/src/components/Menu/MenuButton.css
+++ b/portfolio-site-react/src/components/Menu/MenuButton.css
@@ -5,23 +5,35 @@
   right: 2%;
   bottom: 2%;
 
-  background-color: hsl(0, 0%, 60%);
-  margin-bottom: 20px;
-  box-shadow: 0 0 30px 10px hsl(0, 0%, 60%);
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
   border: 10px solid hsl(0, 0%, 10%);
-  outline: none;
+
+  background-color: transparent;
+
   transition: all .2s cubic-bezier(0, 1.26, .8, 1.28);
 }
 
 #roundButton.hidden {
-  visibility: hidden;
+  /* visibility: hidden; */
+  background-color: none;
+  margin-bottom: none;
+  box-shadow: none;
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  border: 10px solid hsl(0, 0%, 10%);
+  outline: none;
 }
  
 #roundButton.visible {
-  visibility: visible;
+  /* visibility: visible; */
+  background-color: hsl(0, 0%, 60%);
+  margin-bottom: 20px;
+  box-shadow: 0 0 30px 10px hsl(0, 0%, 60%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 10px solid hsl(0, 0%, 10%);
+  outline: none;
 }
 
 
