--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -17,6 +17,7 @@
 
 
 .portfolio_contents {
+  padding: 100px 20px;
   display: flex;
   /* flex-direction: column;  */
   /* flex-direction: row;  */
