--- a/portfolio-site-react/src/components/Menu/MenuButton.css
+++ b/portfolio-site-react/src/components/Menu/MenuButton.css
@@ -54,7 +54,12 @@
 
 
 @media(max-width: 768px) {
-  #roundButton {
+
+#roundButton.hidden { 
+  border: 8px solid hsl(0, 0%, 10%);
+}
+
+  #roundButton.visible {
     border: 8px solid hsl(0, 0%, 10%);
     width: 30px;
     height: 30px;
@@ -63,9 +68,22 @@
 
 
 @media(max-width: 425px) {
-  #roundButton {
+  #roundButton.visible {
     border: 4px solid hsl(0, 0%, 10%);
-    width: 15px;
+    width: 20px;
     height: 20px;
+  }
+}
+
+@media(max-width: 320px) {
+
+  #roundButton.hidden { 
+    border: 6px solid hsl(0, 0%, 10%);
+  }
+
+  #roundButton.visible {
+    border: 2px solid hsl(0, 0%, 10%);
+    width: 15px;
+    height: 15px;
   }
 }
