--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -222,7 +222,7 @@
 
 @media(max-width: 1024px) {
   .portfolio_contents {
-    
+    padding: 40px 20px;
     flex-direction: column-reverse;
     
   }
@@ -384,9 +384,13 @@
 @media(max-width: 375px) {
   
 
+  .portfolio_contents {
+    padding-top: 20px;
+  }
+
   .portfolio_list__title,
   .portfolio__heading {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .portfolio_data__title {  
