--- a/portfolio-site-react/src/components/PageContents/Section.css
+++ b/portfolio-site-react/src/components/PageContents/Section.css
@@ -2,7 +2,7 @@
 
 .section {
   margin-top: 150px;
-  padding: 40px 0;
+  padding: 20px 0;
   width: 100vw;
   /* height: 100vh; */
 
@@ -12,6 +12,7 @@
   align-items: center;
 
   position: relative;
+    /* Allows the Heading to be set with position absolute */
 
   /* overflow: scroll; */
 }
@@ -40,7 +41,7 @@
   /* background-color: transparent; */
   color: #000;
 
-  overflow: scroll;
+  /* overflow: scroll; */
   transition: all .4s ease;
 
 }
@@ -80,7 +81,7 @@
 
   .section_contents {
     margin-top: 20px;
-    padding: 8px 0;
+    padding: 20px 0;
   }
 
 }
@@ -90,7 +91,7 @@
   .section {
     margin-top: 10px;
     /* height: 400px; */
-    overflow: scroll;
+    /* overflow: scroll; */
   }
 
   .section_contents {
