--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -15,9 +15,14 @@
 /* Display the Title of the Next Portfolio */
 /* => Manipulate .portfolio_list__background, max-height */
 
-
 .portfolio_contents {
+  /* margin-bottom: 70px; */
   padding: 100px 20px;
+}
+
+
+
+.portfolio_display {
   display: flex;
   /* flex-direction: column;  */
   /* flex-direction: row;  */
@@ -221,7 +226,7 @@
 
 
 @media(max-width: 1024px) {
-  .portfolio_contents {
+  .portfolio_display {
     padding: 40px 20px;
     flex-direction: column-reverse;
     
@@ -264,9 +269,22 @@
 
 @media(max-width: 768px) {
 
+  #portfolio.section {
+    margin-bottom: 0;
+    padding: 0;
+  }
+
+  .section_contents {
+    margin: 0;
+    padding: 40px 20px;
+  }
+
+  .portfolio_display {
+    padding: 0;
+  }
 
   .portfolio_list {
-    margin-bottom: 20px;
+    margin-bottom: 0;
     padding: 20px;
     
     /* overflow: hidden; */
@@ -285,7 +303,7 @@
     /* padding: 20px 0; */
   }
 
-  .portfolio_contents {
+  .portfolio_display {
     
     flex-direction: column-reverse;
     
@@ -384,7 +402,7 @@
 @media(max-width: 375px) {
   
 
-  .portfolio_contents {
+  .portfolio_display {
     padding-top: 20px;
   }
 
