--- a/portfolio-site-react/src/components/PageContents/Portfolio/PortfolioSelection/SkillTabs/SkillTabs.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/PortfolioSelection/SkillTabs/SkillTabs.css
@@ -1,16 +1,48 @@
-.tab-list {  border-bottom: 1px solid #ccc;
-  padding-left: 0;
+.tab-list {  
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
+  display: flex;
+  overflow: scroll;
 }
 
 .tab-list-item {
-  display: inline-block;
-  list-style: none;
-  margin-bottom: -1px;
-  padding: 0.5rem 0.75rem;
+  margin-right: 4px;
+  margin-bottom: 10px; 
+  box-shadow: 0 0 1px 1px hsl(0, 0%, 80%);
+  padding: 5px 10px;
+  width: 100%;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .4s ease
+}
+
+.tab-list-item:hover {
+  box-shadow: 0 0 4px 4px hsl(0, 0%, 80%);
 }
 
 .tab-list-active {
-  background-color: white;
-  border: solid #ccc;
-  border-width: 1px 1px 0 1px;
+  box-shadow: 0 0 4px 4px hsl(0, 0%, 80%);
+}
+
+@media(max-width: 768px) {
+  .tab-list-item {
+    margin-bottom: 4px; 
+  } 
+}
+
+@media(max-width: 768px) {
+  .tab-list-item {
+    font-size: 14px;
+  } 
+}
+
+
+@media(max-width: 425px) {
+
+  .tab-list-item {
+    font-size: 10px;
+  } 
+
 }
