Reason: Conditional rendering and the output.

--- a/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/Portfolio.css
@@ -92,7 +92,6 @@
 
 }
 
-
 .portfolio_list__item {
   margin: 4px;
   /* border-bottom: 1px solid #fff; */
@@ -113,6 +112,10 @@
   /* font-weight: bold; */
   
   cursor: pointer;
+}
+
+.portfolio_list__item.active_item {
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); 
 }
 
 .portfolio_list__title,
@@ -148,6 +151,13 @@
 .portfolio_skill__name {     
   /* background-color: hsl(60, 100%, 96%); */
   font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  overflow: scroll;
+}
+
+.portfolio_skill__nameItem {
+  margin-right: 8px;  
 }
 
 .visit_url_container { 
