--- a/portfolio-site-react/src/components/PageContents/Portfolio/PortfolioSelection/SkillTabs/SkillTabs.css
+++ b/portfolio-site-react/src/components/PageContents/Portfolio/PortfolioSelection/SkillTabs/SkillTabs.css
@@ -1,5 +1,5 @@
 .tab-list {  
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #000;
   padding: 10px;
   display: flex;
   overflow: scroll;
